--- a/plans.html
+++ b/plans.html
@@ -22,7 +22,6 @@
   --pending:#9e6816;
   --forexGreen:#0bd07c;
 }
-
 *{box-sizing:border-box}
 body{
   margin:0;
@@ -37,13 +36,11 @@ body{
 }
 .container{max-width:980px;margin:0 auto}
 
-/* ===========================
-   ✅ TOP FLOAT NAV (LEFT BACK + RIGHT MENU)
-   =========================== */
+/* ✅ TOP FLOAT NAV (LEFT BACK + RIGHT MENU) */
 .topFloatNav{
   position:sticky;
   top:10px;
-  z-index:9999;
+  z-index:500; /* ✅ lower than sidebar */
   display:flex;
   justify-content:space-between;
   align-items:center;
@@ -76,49 +73,55 @@ body{
 }
 .menuBtn:hover{background:rgba(255,255,255,.10)}
 
-/* ===========================
-   ✅ SIDEBAR + OVERLAY (PREMIUM)
-   =========================== */
+/* ✅ SIDEBAR + OVERLAY (FIXED) */
 .overlay{
   position:fixed; inset:0;
   background:rgba(0,0,0,.65);
-  display:none; z-index:999;
+  display:none;
+  z-index:99998; /* ✅ super high */
   backdrop-filter: blur(6px);
 }
 .sidebar{
-  position:fixed; top:0; right:-320px;
-  width:290px; height:100vh;
+  position:fixed; top:0; right:-340px;
+  width:300px; height:100vh;
   background:linear-gradient(180deg, rgba(5,10,24,1), rgba(2,6,23,1));
   border-left:1px solid rgba(255,255,255,.12);
   padding:16px;
   transition:.28s ease;
-  z-index:1000;
+  z-index:99999; /* ✅ on top */
   box-shadow:0 20px 90px rgba(0,0,0,.75);
 }
 .sidebar.open{ right:0; }
 .overlay.show{ display:block; }
 
 .sideTop{
-  display:flex;justify-content:space-between;align-items:center;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
   margin-bottom:14px;
 }
 .brand{font-weight:1000;font-size:18px;letter-spacing:.6px;}
 .closeBtn{
-  border-radius:12px;
-  padding:8px 12px;
+  width:44px;height:44px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  border-radius:14px;
   border:1px solid rgba(255,255,255,.14);
-  background:rgba(0,0,0,.22);
+  background:rgba(0,0,0,.25);
   color:white;
   font-weight:1000;
   cursor:pointer;
+  font-size:18px;
 }
+.closeBtn:hover{background:rgba(255,255,255,.08)}
 .userTag{
   padding:12px;border-radius:16px;
   border:1px solid rgba(255,255,255,.12);
   background:rgba(255,255,255,.06);
   margin-bottom:14px;
 }
-.small{color:var(--muted);font-size:13px;margin-top:8px}
+.sideSmall{color:var(--muted);font-size:13px;margin-top:0}
 .sideItem{
   display:flex;gap:10px;align-items:center;
   padding:12px;
@@ -143,9 +146,7 @@ body{
   box-shadow:0 20px 70px rgba(239,68,68,.15);
 }
 
-/* ===========================
-   MAIN UI (same premium theme)
-   =========================== */
+/* HEADER BOX */
 .topBar{
   display:flex;
   justify-content:space-between;
@@ -204,8 +205,8 @@ body{
   background:rgba(255,255,255,.08);
   overflow:hidden;border:1px solid rgba(255,255,255,.12);
 }
-.statFill{height:100%;width:35%}
-.fillTotal{background:linear-gradient(90deg, rgba(91,108,255,1), rgba(52,211,153,1))}
+.statFill{height:100%}
+.fillTotal{width:100%;background:linear-gradient(90deg, rgba(91,108,255,1), rgba(52,211,153,1))}
 .fillPending{background:linear-gradient(90deg, var(--pending), rgba(250,204,21,.65))}
 .fillActive{background:linear-gradient(90deg, var(--forexGreen), rgba(34,197,94,.60))}
 .fillCompleted{background:linear-gradient(90deg, rgba(56,189,248,1), rgba(91,108,255,1))}
@@ -220,6 +221,7 @@ body{
   margin-bottom:14px;
 }
 .section h2{margin:0;font-size:26px;font-weight:1000}
+.small{color:var(--muted);font-size:13px;margin-top:10px}
 
 .grid{
   display:grid;grid-template-columns:1fr;
@@ -246,7 +248,6 @@ body{
 .planInner{position:relative;z-index:2}
 .planTitle{font-size:20px;font-weight:1000;letter-spacing:.2px}
 .planSub{margin-top:6px;color:rgba(255,255,255,.65);font-size:13px;font-weight:900}
-
 .chips{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
 .chip{
   padding:8px 12px;border-radius:999px;
@@ -279,6 +280,32 @@ input:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,2
 .ok{color:var(--ok);font-weight:1000}
 .err{color:var(--err);font-weight:1000}
 .warn{color:var(--warn);font-weight:1000}
+
+.summaryCard{
+  margin-top:14px;border-radius:22px;padding:16px;
+  border:1px solid rgba(255,255,255,.12);
+  background:
+    radial-gradient(900px 400px at 15% 20%, rgba(0,0,0,0.55), transparent 55%),
+    radial-gradient(900px 400px at 80% 20%, rgba(52,211,153,0.18), transparent 55%),
+    linear-gradient(135deg, rgba(3,7,18,0.85), rgba(15,23,42,0.85));
+  box-shadow:0 28px 90px rgba(0,0,0,.55);
+}
+.summaryTop{display:flex;justify-content:space-between;gap:12px;align-items:flex-start;flex-wrap:wrap}
+.summaryTitle{font-size:16px;font-weight:1000}
+.summaryAmt{font-size:34px;font-weight:1000;margin-top:10px;letter-spacing:.4px}
+.summaryMeta{margin-top:8px;color:rgba(255,255,255,.75);font-weight:900;font-size:13px}
+.hr{height:1px;background:rgba(255,255,255,.10);margin:14px 0}
+.line{display:flex;justify-content:space-between;gap:12px;margin-top:10px;font-size:14px}
+.line span{opacity:.65}
+.actionsRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
+.actionBtn{
+  padding:12px 14px;border-radius:14px;font-weight:1000;cursor:pointer;
+  background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.14);color:white;
+}
+.actionBtn:hover{background:rgba(255,255,255,.10)}
+
+a{color:#9bdcff;text-decoration:none;font-weight:1000}
+a:hover{text-decoration:underline}
 
 /* Modal */
 .modal{
@@ -316,48 +343,22 @@ input:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,2
 .pActive{background:rgba(11,208,124,.16);border-color:rgba(11,208,124,.38);color:var(--forexGreen)}
 .pCompleted{background:rgba(56,189,248,.14);border-color:rgba(56,189,248,.35);color:#38bdf8}
 .pRejected{background:rgba(248,113,113,.14);border-color:rgba(248,113,113,.35);color:#f87171}
-
-.summaryCard{
-  margin-top:14px;border-radius:22px;padding:16px;
-  border:1px solid rgba(255,255,255,.12);
-  background:
-    radial-gradient(900px 400px at 15% 20%, rgba(0,0,0,0.55), transparent 55%),
-    radial-gradient(900px 400px at 80% 20%, rgba(52,211,153,0.18), transparent 55%),
-    linear-gradient(135deg, rgba(3,7,18,0.85), rgba(15,23,42,0.85));
-  box-shadow:0 28px 90px rgba(0,0,0,.55);
-}
-.summaryTop{display:flex;justify-content:space-between;gap:12px;align-items:flex-start;flex-wrap:wrap}
-.summaryTitle{font-size:16px;font-weight:1000}
-.summaryAmt{font-size:34px;font-weight:1000;margin-top:10px;letter-spacing:.4px}
-.summaryMeta{margin-top:8px;color:rgba(255,255,255,.75);font-weight:900;font-size:13px}
-.hr{height:1px;background:rgba(255,255,255,.10);margin:14px 0}
-.line{display:flex;justify-content:space-between;gap:12px;margin-top:10px;font-size:14px}
-.line span{opacity:.65}
-.actionsRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-.actionBtn{
-  padding:12px 14px;border-radius:14px;font-weight:1000;cursor:pointer;
-  background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.14);color:white;
-}
-.actionBtn:hover{background:rgba(255,255,255,.10)}
-
-a{color:#9bdcff;text-decoration:none;font-weight:1000}
-a:hover{text-decoration:underline}
 </style>
 </head>
 
 <body>
 
-<!-- OVERLAY + SIDEBAR -->
+<!-- ✅ OVERLAY + SIDEBAR -->
 <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
-<div id="sidebar" class="sidebar">
+<div id="sidebar" class="sidebar" aria-hidden="true">
   <div class="sideTop">
     <div class="brand">COINLUXORA</div>
-    <button class="closeBtn" onclick="closeMenu()">✕</button>
+    <button class="closeBtn" onclick="closeMenu()" aria-label="Close menu">✕</button>
   </div>
 
   <div class="userTag">
-    <div class="small">Logged in as</div>
+    <div class="sideSmall">Logged in as</div>
     <div id="sideEmail" style="font-weight:1000;margin-top:6px;">---</div>
   </div>
 
@@ -374,13 +375,12 @@ a:hover{text-decoration:underline}
 
 <div class="container">
 
-  <!-- ✅ TOP LEFT BACK + TOP RIGHT MENU -->
+  <!-- ✅ STICKY TOP NAV -->
   <div class="topFloatNav">
     <button class="backBtn" onclick="goDashboard()">← Dashboard</button>
-    <button class="menuBtn" onclick="openMenu()">☰</button>
+    <button class="menuBtn" onclick="openMenu()" aria-label="Open menu">☰</button>
   </div>
 
-  <!-- TOP HEADER -->
   <div class="topBar">
     <div>
       <div class="title">Investment Plans</div>
@@ -397,7 +397,6 @@ a:hover{text-decoration:underline}
     </div>
   </div>
 
-  <!-- STATS -->
   <div class="statsGrid">
     <div class="statCard">
       <div class="statLabel">Total Plans</div>
@@ -425,13 +424,11 @@ a:hover{text-decoration:underline}
     </div>
   </div>
 
-  <!-- ACTIVE -->
   <div class="section">
     <h2>My Active Plan</h2>
     <div id="activePlan"></div>
   </div>
 
-  <!-- CHOOSE -->
   <div class="section" id="plansSection">
     <h2>Choose a Plan</h2>
     <div class="small">Start an investment plan with defined ROI, duration and investment range.</div>
@@ -472,15 +469,22 @@ const PLANS = [
 
 init();
 
-/* MENU */
+/* ✅ Sidebar open/close fixed */
 function openMenu(){
   document.getElementById("sidebar").classList.add("open");
   document.getElementById("overlay").classList.add("show");
+  document.getElementById("sidebar").setAttribute("aria-hidden","false");
+  document.body.style.overflow="hidden";
 }
 function closeMenu(){
   document.getElementById("sidebar").classList.remove("open");
   document.getElementById("overlay").classList.remove("show");
+  document.getElementById("sidebar").setAttribute("aria-hidden","true");
+  document.body.style.overflow="";
 }
+document.addEventListener("keydown",(e)=>{
+  if(e.key==="Escape") closeMenu();
+});
 
 /* NAV */
 function goDashboard(){ window.location.href="user-dashboard.html"; }
@@ -515,7 +519,7 @@ function updateStats(){
   document.getElementById("barCompleted").style.width = pct(completed) + "%";
 }
 
-/* render */
+/* Render Plans */
 function renderPlans(){
   const wrapper=document.getElementById("plansList");
   wrapper.innerHTML="";
@@ -557,7 +561,6 @@ async function loadPlansForStats(){
   updateStats();
 }
 
-/* active plan */
 async function loadActivePlan(){
   const activePlan=document.getElementById("activePlan");
 
@@ -618,7 +621,6 @@ async function loadActivePlan(){
   `;
 }
 
-/* start */
 async function startPlan(index){
   const msg=document.getElementById("msg");
   msg.innerHTML="Starting plan…";
@@ -661,7 +663,6 @@ async function startPlan(index){
   loadActivePlan();
 }
 
-/* realtime */
 function initRealtimePlans(){
   if(plansChannel){
     supabaseClient.removeChannel(plansChannel);
@@ -682,7 +683,7 @@ function initRealtimePlans(){
     .subscribe();
 }
 
-/* modal */
+/* Modal */
 function openModal(plan){
   currentPlanDetails=plan;
   document.getElementById("planModalBody").innerHTML = `
@@ -735,7 +736,6 @@ document.getElementById("downloadPlanPdfBtn").addEventListener("click", ()=>{
   doc.save(`coinluxora-plan-${currentPlanDetails.id}.pdf`);
 });
 
-/* init */
 async function init(){
   const { data:userData } = await supabaseClient.auth.getUser();
   if(!userData.user){
