--- a/support.html
+++ b/support.html
@@ -79,12 +79,19 @@ body{
 .sidebar{
   position:fixed; top:0; right:-340px;
   width:300px; height:100vh;
-  background:linear-gradient(180deg, rgba(5,10,24,1), rgba(2,6,23,1));
+
+  /* ✅ FIXED: match the same menu color style used in Withdraw/Plans */
+  background:
+    radial-gradient(900px 520px at 10% 0%, rgba(83,113,255,.10), transparent 55%),
+    radial-gradient(900px 520px at 90% 0%, rgba(52,211,153,.08), transparent 55%),
+    rgba(5,10,24,0.98);
+
   border-left:1px solid rgba(255,255,255,.12);
   padding:16px;
   transition:.28s ease;
   z-index:99999;
   box-shadow:0 20px 90px rgba(0,0,0,.75);
+  backdrop-filter: blur(14px);
 }
 .sidebar.open{ right:0; }
 .overlay.show{ display:block; }
@@ -354,7 +361,7 @@ let currentUserEmail="";
 
 init();
 
-/* ✅ Menu Open/Close FIXED */
+/* ✅ Menu Open/Close */
 function openMenu(){
   document.getElementById("sidebar").classList.add("open");
   document.getElementById("overlay").classList.add("show");
@@ -371,9 +378,7 @@ document.addEventListener("keydown",(e)=>{
   if(e.key==="Escape") closeMenu();
 });
 
-function goDashboard(){
-  window.location.href="user-dashboard.html";
-}
+function goDashboard(){ window.location.href="user-dashboard.html"; }
 
 function pill(s){
   const st=(s||"open").toLowerCase();
@@ -389,7 +394,6 @@ async function init(){
   currentUserEmail=userData.user.email;
   document.getElementById("topEmail").innerText=currentUserEmail;
   document.getElementById("sideEmail").innerText=currentUserEmail;
-
   loadTickets();
 }
 
@@ -420,7 +424,6 @@ async function submitTicket(){
   msg.innerHTML="<span class='ok'>Ticket submitted ✅</span>";
   document.getElementById("subject").value="";
   document.getElementById("message").value="";
-
   loadTickets();
 }
 
