--- a/support.html
+++ b/support.html
@@ -68,33 +68,30 @@ body{
 }
 .menuBtn:hover{background:rgba(255,255,255,.10)}
 
-/* ✅ OVERLAY (NO FILTER/NO BLUR) */
+/* ✅ SIDEBAR + OVERLAY */
 .overlay{
   position:fixed; inset:0;
-  background:rgba(0,0,0,.80); /* stronger */
+  background:rgba(0,0,0,.65);
   display:none;
   z-index:99998;
+  backdrop-filter: blur(6px);
 }
-
-/* ✅ SIDEBAR = PURE SOLID BACKGROUND */
 .sidebar{
   position:fixed; top:0; right:-340px;
   width:300px; height:100vh;
 
-  /* ✅ PURE SOLID DARK (NO GRADIENTS, NO TRANSPARENCY) */
-  background:#050a18;
+  /* ✅ FIXED: match the same menu color style used in Withdraw/Plans */
+  background:
+    radial-gradient(900px 520px at 10% 0%, rgba(83,113,255,.10), transparent 55%),
+    radial-gradient(900px 520px at 90% 0%, rgba(52,211,153,.08), transparent 55%),
+    rgba(5,10,24,0.98);
 
   border-left:1px solid rgba(255,255,255,.12);
   padding:16px;
   transition:.28s ease;
   z-index:99999;
   box-shadow:0 20px 90px rgba(0,0,0,.75);
-
-  /* ✅ fully disable any blending */
-  backdrop-filter:none !important;
-  -webkit-backdrop-filter:none !important;
-  mix-blend-mode:normal !important;
-  isolation:isolate;
+  backdrop-filter: blur(14px);
 }
 .sidebar.open{ right:0; }
 .overlay.show{ display:block; }
@@ -105,12 +102,7 @@ body{
   align-items:center;
   margin-bottom:14px;
 }
-.brand{
-  font-weight:1000;
-  font-size:18px;
-  letter-spacing:.6px;
-  color:#f8fafc;
-}
+.brand{font-weight:1000;font-size:18px;letter-spacing:.6px;}
 .closeBtn{
   width:44px;height:44px;
   display:flex;
@@ -118,17 +110,17 @@ body{
   justify-content:center;
   border-radius:14px;
   border:1px solid rgba(255,255,255,.14);
-  background:#0b1224;
+  background:rgba(0,0,0,.25);
   color:white;
   font-weight:1000;
   cursor:pointer;
   font-size:18px;
 }
-.closeBtn:hover{background:#0f1a33}
+.closeBtn:hover{background:rgba(255,255,255,.08)}
 .userTag{
   padding:12px;border-radius:16px;
   border:1px solid rgba(255,255,255,.12);
-  background:#0b1224;
+  background:rgba(255,255,255,.06);
   margin-bottom:14px;
 }
 .sideSmall{color:var(--muted);font-size:13px;margin-top:0}
@@ -138,18 +130,12 @@ body{
   border:1px solid rgba(255,255,255,.12);
   border-radius:16px;margin-bottom:10px;
   color:var(--text);
-
-  /* ✅ solid cards too */
-  background:#0b1224;
-
+  background:rgba(0,0,0,.22);
   font-weight:1000;
   text-decoration:none;
 }
-.sideItem:hover{background:#0f1a33}
-.activeLink{
-  border:1px solid rgba(56,189,248,.55);
-  background:rgba(56,189,248,0.10);
-}
+.sideItem:hover{background:rgba(255,255,255,.08)}
+.activeLink{border:1px solid rgba(56,189,248,.55);background:rgba(56,189,248,0.12);}
 .sideLogout{
   width:100%;
   padding:14px;
@@ -234,7 +220,10 @@ input:focus,textarea:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4p
   margin-top:12px;
   background:rgba(0,0,0,.22);
 }
-.ticketTop{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap}
+.ticketTop{
+  display:flex; justify-content:space-between; gap:10px; align-items:flex-start;
+  flex-wrap:wrap;
+}
 .ticketTitle{font-weight:1000;font-size:16px}
 .ticketBody{margin-top:10px;color:rgba(255,255,255,.84);font-weight:800;line-height:1.4}
 .hr{height:1px;background:rgba(255,255,255,.10);margin:12px 0}
@@ -257,8 +246,10 @@ input:focus,textarea:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4p
 .open{background:rgba(250,204,21,.14);border-color:rgba(250,204,21,.35);color:#facc15}
 .closed{background:rgba(34,197,94,.16);border-color:rgba(34,197,94,.38);color:#22c55e}
 
-/* Quick support */
-.quickGrid{display:grid;grid-template-columns:1fr;gap:12px;margin-top:12px}
+/* Quick support row */
+.quickGrid{
+  display:grid;grid-template-columns:1fr;gap:12px;margin-top:12px;
+}
 @media(min-width:720px){.quickGrid{grid-template-columns:1fr 1fr}}
 .quickCard{
   border:1px solid rgba(255,255,255,.12);
@@ -266,6 +257,7 @@ input:focus,textarea:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4p
   padding:14px;
   background:rgba(0,0,0,.22);
 }
+.quickCard strong{font-weight:1000}
 a{color:#9bdcff;text-decoration:none;font-weight:1000}
 a:hover{text-decoration:underline}
 
@@ -277,6 +269,7 @@ a:hover{text-decoration:underline}
 
 <body>
 
+<!-- ✅ OVERLAY + SIDEBAR -->
 <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
 <div id="sidebar" class="sidebar" aria-hidden="true">
@@ -303,9 +296,10 @@ a:hover{text-decoration:underline}
 
 <div class="container">
 
+  <!-- ✅ Sticky top nav -->
   <div class="topFloatNav">
     <button class="backBtn" onclick="goDashboard()">← Dashboard</button>
-    <button class="menuBtn" onclick="openMenu()">☰</button>
+    <button class="menuBtn" onclick="openMenu()" aria-label="Open menu">☰</button>
   </div>
 
   <div class="topBar">
@@ -313,6 +307,7 @@ a:hover{text-decoration:underline}
     <div class="email" id="topEmail">Loading…</div>
   </div>
 
+  <!-- Contact Support -->
   <div class="section">
     <h2>Contact Support</h2>
     <div class="small">Submit a ticket and our support team will respond as soon as possible.</div>
@@ -324,12 +319,14 @@ a:hover{text-decoration:underline}
     <div id="msg" class="small"></div>
   </div>
 
+  <!-- Tickets -->
   <div class="section">
     <h2>My Tickets</h2>
     <div id="ticketMsg" class="small">Loading…</div>
     <div id="ticketList"></div>
   </div>
 
+  <!-- Quick Support -->
   <div class="section">
     <h2>Quick Support</h2>
     <div class="small">You can also contact us instantly:</div>
@@ -361,19 +358,25 @@ const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYm
 const supabaseClient=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
 let currentUserEmail="";
+
 init();
 
+/* ✅ Menu Open/Close */
 function openMenu(){
   document.getElementById("sidebar").classList.add("open");
   document.getElementById("overlay").classList.add("show");
+  document.getElementById("sidebar").setAttribute("aria-hidden","false");
   document.body.style.overflow="hidden";
 }
 function closeMenu(){
   document.getElementById("sidebar").classList.remove("open");
   document.getElementById("overlay").classList.remove("show");
+  document.getElementById("sidebar").setAttribute("aria-hidden","true");
   document.body.style.overflow="";
 }
-document.addEventListener("keydown",(e)=>{ if(e.key==="Escape") closeMenu(); });
+document.addEventListener("keydown",(e)=>{
+  if(e.key==="Escape") closeMenu();
+});
 
 function goDashboard(){ window.location.href="user-dashboard.html"; }
 
